created styles inside html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dox You</title>
   </head>
+  <style>
+    h1 {
+      text-align: center;
+      font-family: "Courier New", Courier, monospace;
+    }
+  </style>
   <body>
     <h1>BOO</h1>
   </body>
