--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dox You</title>
   </head>
-  <style>
-    h1 {
-      text-align: center;
-      font-family: "Courier New", Courier, monospace;
-    }
-  </style>
+  <link rel="stylesheet" href="src\style.css" />
   <body>
     <h1>BOO</h1>
   </body>
