open-source link added html + css styling

--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
         </div>
       </div>
     </div>
+    <p class="open-source-link">
+      <a href="https://neon-frangollo-cedcf6.netlify.app/?">Open-source code</a>
+      by Samia Ali
+    </p>
     <script src="src/script.js"></script>
   </body>
 </html>
