current day icon synced with weather description

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
             <div class="clearfix">
               <div class="float-left">
                 <li>
-                  <span class="current-date">23 Mar 16:00</span>
+                  <span class="current-date">3 June 16:00</span>
 
-                  <span class="icon-today float-left"
-                    ><i class="fa-solid fa-cloud-sun"></i
-                  ></span>
+                  <span class="float-left" id="current-icon"
+                    ><img src="" alt="clear"
+                  /></span>
                 </li>
               </div>
             </div>
