forecast created in js using dynamic function

--- a/index.html
+++ b/index.html
@@ -76,40 +76,7 @@
               >
             </li>
           </ul>
-          <div class="row">
-            <div class="col-2 day-1">
-              <div><i class="fa-solid fa-cloud-sun"></i></div>
-              Mon
-              <div class="forecast" id="mon-forecast">13°C / 2°C</div>
-            </div>
-            <div class="col-2 day-2">
-              <div>
-                <i class="fa-solid fa-snowflake"></i>
-              </div>
-              Tue
-              <div class="forecast" id="tue-forecast">8°C / -1°C</div>
-            </div>
-            <div class="col-2 day-3">
-              <div><i class="fa-solid fa-wind"></i></div>
-              Wed
-              <div class="forecast" id="wed-forecast">9°C / 6°C</div>
-            </div>
-            <div class="col-2 day-4">
-              <div><i class="fa-solid fa-cloud-showers-heavy"></i></div>
-              Thur
-              <div class="forecast" id="thur-forecast">11°C / 9°C</div>
-            </div>
-            <div class="col-2 day-5">
-              <div><i class="fa-sharp fa-solid fa-sun"></i></div>
-              Fri
-              <div class="forecast" id="fri-forecast">13°C / 8°C</div>
-            </div>
-            <div class="col-2 day-6">
-              <div><i class="fa-solid fa-cloud-sun-rain"></i></div>
-              Sat
-              <div class="forecast" id="sat-forecast">12°C / 7°C</div>
-            </div>
-          </div>
+          <div id="forecast"></div>
         </div>
       </div>
     </div>
