removed Fahrenheit conversion

--- a/index.html
+++ b/index.html
@@ -61,14 +61,7 @@
             </div>
             <li class="description-today">Partly Cloudy</li>
             <li class="temp-today">
-              <span class="big-temp">12</span
-              ><span class="unit"
-                ><span class="cTemp"> <a href="#">°C</a> </span>|<span
-                  class="fTemp"
-                >
-                  <a href="#">F</a>
-                </span></span
-              >
+              <span class="big-temp">12</span><span class="unit">°C</span>
             </li>
           </ul>
           <div id="forecast"></div>
